--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+
+    compile 'de.greenrobot:greendao:1.3.7'
 }
